# pyshop-api

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README_ADDITION.md  alembic.ini  docker-compose.yml  playwright.config.py  pyproject.toml  pytest.ini  repository_enhancement_plan.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  dependabot-auto-merge.yml  python-tests.yml
alembic/: env.py
alembic/versions/: 709691f8a05f_add_cart_and_cartitem_models_for_.py  d591c567f6a0_init_user_product_tables.py
app/: database.py  main.py
app/auth/: authentification.py  user_manager.py
app/core/: config.py
app/dependencies/: cart.py
app/middleware/: __init__.py  session.py
app/models/: cart.py  product.py  user.py
app/routers/: cart.py  products.py  profile.py
app/services/: cart_resolution.py  cart_service.py
app/utils/: __init__.py  cookies.py
docs/: API.md  DEPLOYMENT.md
frontend/: .dockerignore  .prettierignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: index.ts
frontend/src/components/examples/: ResponsiveExample.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  Navigation.tsx  index.ts
frontend/src/components/ui/: dropdown-menu.tsx  error.test.tsx  error.tsx  index.ts  loading.test.tsx  loading.tsx  responsive-grid.tsx
frontend/src/config/: breakpoints.ts  index.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: index.ts  useBreakpoint.test.ts  useBreakpoint.ts  useLocalStorage.ts
frontend/src/styles/: globals.ts
frontend/src/test/: README.md  example.test.ts  react-testing-library.test.tsx  setup.ts  utils.tsx
frontend/src/types/: index.ts
frontend/src/utils/: index.test.ts  index.ts  responsive.ts
md_context/: frontend_plan.md  repository_enhancement_plan.md  shopping_cart_plan.md
monitoring/: prometheus.yml
scripts/: db.sh  dev.sh  lint.sh  setup.sh  test.sh
tests/: conftest.py  test_cookie_management.py  test_products.py  test_session_middleware.py
tests/e2e/: conftest.py  pytest.ini  test_api_flow.py
