[tool.poetry]
name = "pyshop-api"
version = "0.1.0"
description = "pyshop-api"
authors = ["Denis Połyncew"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlmodel = "^0.0.24"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pytest-asyncio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.2"
pytest = "^8.4.1"
aiosqlite = "^0.21.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
