[tool.poetry]
name = "pyshop-api"
version = "0.1.0"
description = "pyshop-api"
authors = ["Denis Połyncew"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlmodel = "^0.0.24"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pytest-asyncio = "^1.0.0"
prometheus-fastapi-instrumentator = "^7.1.0"
loguru = "^0.7.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
python-jose = "^3.5.0"
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
aiosqlite = "^0.21.0"
httpx = "^0.27.0"
ruff = "^0.12.2"
black = "^25.1.0"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
types-python-jose = "^3.5.0.20250531"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = ["tests/**","alembic/**"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39']
extend-exclude = '''
/(
  alembic/versions/.*
)$
'''

[mypy]
python_version = 3.10
strict = true

